# pbgzip

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  NEWS  README  README.md  autogen.sh  bgzf.c  bgzf.h  block.c  configure.ac  consumer.c  consumer.h  pbgzf.c  pbgzf.h  pbgzip.c  reader.c  reader.h  util.h  writer.c
igzip/: Makefile  options.h  options.inc
igzip/c_code/: bitbuf2.h
