bin_PROGRAMS = pbgzip

pbgzip_SOURCES = \
				 bgzf.c \
				 block.c \
				 configure.ac \
				 consumer.c \
				 knetfile.c \
				 pbgzf.c \
				 pbgzip.c \
				 queue.c \
				 reader.c \
				 util.c \
				 writer.c


pbgzip_LDADD = 
pbgzip_LDFLAGS = 

EXTRA_DIST = LICENSE \
			 README.md \
			 pbgzip.git.rev \
			 autogen.sh 

SUBDIRS = . 
